--- a/example/styles.css
+++ b/example/styles.css
@@ -30,6 +30,8 @@
     margin-left: auto;
     margin-right: auto;
     width: 400px;
+    padding: 0px;
+    vertical-align: bottom;
 }
 
 .creditsFormRangeInput {
@@ -44,10 +46,24 @@
     transition: opacity .2s;
 }
 
+.creditsLine{
+    padding: 10px;
+}
+
 .labelValueElement{
     margin-right: 10px;
     display: inline-block;
     width: 125px;
+}
+
+.creditsBox{
+    padding-top: 50px;
+    border: 8px solid #3b3b3b;
+    background-color: #616161;
+    color: #ffffff;
+    width:300px;
+    height: 454px;
+    vertical-align: top;
 }
 
 .creditsFormBox{
@@ -57,7 +73,7 @@
     border: 13px solid #3b3b3b;
     border-radius: 15px;
     background-color: #616161;
-    color: #00ff00;
+    color: #ffffff;
     width:650px;
     margin-bottom: 30px;
 }
@@ -74,7 +90,7 @@
     border: 3px solid #3b3b3b;
     border-radius: 1px;
     background-color: #919191;
-    color: #00ff00;
+    color: #ffffff;
     width: 300px;
     align: bottom;
 }
@@ -85,7 +101,7 @@
     border: 3px solid #3b3b3b;
     border-radius: 1px;
     background-color: #919191;
-    color: #00ff00;
+    color: #ffffff;
     width: 300px;
     height: 75px;
 }
