--- a/example/styles.css
+++ b/example/styles.css
@@ -57,13 +57,14 @@
 }
 
 .creditsBox{
-    padding-top: 50px;
+    padding-top: 10px;
     border: 8px solid #3b3b3b;
     background-color: #616161;
     color: #ffffff;
     width:300px;
-    height: 454px;
+    height: 494px;
     vertical-align: top;
+    overflow: auto;
 }
 
 .creditsFormBox{
@@ -93,6 +94,17 @@
     color: #ffffff;
     width: 300px;
     align: bottom;
+}
+
+.creditsTextArea{
+    margin: 5px;
+    padding: 15px;
+    border: 3px solid #3b3b3b;
+    border-radius: 1px;
+    background-color: #919191;
+    color: #ffffff;
+    width: 225px;
+    height: 75px;
 }
 
 .creditsFormTextArea{
