--- a/example/styles.css
+++ b/example/styles.css
@@ -50,6 +50,12 @@
     padding: 10px;
 }
 
+#content{
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .labelValueElement{
     margin-right: 10px;
     display: inline-block;
